Implemented ASPX page for Arranging Coins problem, added input box for user input, and integrated GitHub remote.

--- a/Final Project/Final Project.csproj
+++ b/Final Project/Final Project.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="default.aspx" />
+    <Content Include="EasyProblemSolution.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +78,13 @@
     </Compile>
     <Compile Include="default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="EasyProblemSolution.aspx.cs">
+      <DependentUpon>EasyProblemSolution.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EasyProblemSolution.aspx.designer.cs">
+      <DependentUpon>EasyProblemSolution.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
